# force

./: .gitignore  Dockerfile  Makefile  README.md  app.py  at_db.py  cookies.pkl  docker-compose.yaml  force.py  manage.py  output.html  package-lock.json  package.json  poetry-shebang  pyproject.toml  requirements.txt  roster.html  setup.cfg  tailwind.config.js  wsgi.py
.kamal/hooks/: post-deploy
config/: crontab  deploy.production.yml  deploy.yml
migrations/: 20240120232948_initial.down.sql  20240120232948_initial.up.sql  20240121022846_unique_index.down.sql  20240121022846_unique_index.up.sql  20240125022939_add_id_indices.down.sql  20240125022939_add_id_indices.up.sql  20240317045917_add_brackets.down.sql  20240317045917_add_brackets.up.sql  20240722020336_add_slack_id.down.sql  20240722020336_add_slack_id.up.sql  20240908170853_add_payment_vendors.down.sql  20240908170853_add_payment_vendors.up.sql  20240910224756_add_payment_vendor_names.down.sql  20240910224756_add_payment_vendor_names.up.sql  20240912000258_add_vendor_payment_tbl.down.sql  20240912000258_add_vendor_payment_tbl.up.sql
migrations/versions/: 20702fd78471_change_payments_id_to_guid.py  209530958db6_create_roster_table.py  302b26b7661e_combine_expenses_payments_into_ledger.py  3442f9a90abc_set_up_ledger_people_mapping_table.py  43c11dfb78af_create_payments_table.py  43e0242dd936_drop_payments_mapping_table.py  747a439e25f9_create_people_payments_mapping.py  7bcf39b34b21_rename_ledger_to_transactions.py  87be38757d25_create_expenses_mapping.py  a0629b1b3edc_create_events_table.py  a8d018c5a807_add_date_to_events.py  e42058c7a40d_create_expenses_table.py  f2581ee149a7_create_player_parent_mapping.py
project/: run_worker.py  run_workflow.py  workflows.py
project/client/static/: main.css
project/client/templates/: _base.html  footer.html  header.html
project/models/: db.py  email.py  slack.py
project/server/: __init__.py  at.py  config.py  db.py  models.py
project/server/main/: views.py
project/server/queries/: players.sql  transactions.sql
project/server/transaction/: __init__.py  views.py
project/server/user/: slack.py  views.py
project/teamsnap/: __init__.py  handler.py  models.py
project/tests/: base.py  test_user.py
project/workflows/: email.py  invoice.py
templates/: index.html  layout.html  ledger.html
(+10 files in other folders)
