[tool.poetry]
name = "force"
version = "0.1.0"
description = "Deanza Force Ledger"
authors = ["rbriski"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
flask-bcrypt = "*"
requests = "*"
pyairtable = "*"
arrow = "*"
gunicorn = "*"
sentry-sdk = {extras = ["flask"], version = "*"}
python-dotenv = "^0.21.0"
alembic = "^1.8.1"
uuid = "^1.30"
flask-sqlalchemy = "^3.0.2"
flask-migrate = "^4.0.0"
importlib-resources = "^5.10.2"
importlib-metadata = "^6.0.0"
zipp = "^3.11.0"
scrapy = "^2.11.0"
selenium = "^4.13.0"
beautifulsoup4 = "^4.12.2"
pydantic = "^2.4.2"

[tool.poetry.dev-dependencies]
"flake8" = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
